--- a/index.html
+++ b/index.html
@@ -5,53 +5,179 @@
 	<meta charset="utf-8"/>
 </head>
 
-<body>
+<body onload="process()">
 <form id="form">
-<label>Stage</label><select id="stage">
-  <option value="0">1-1</option>
-  <option value="1">1-2</option>
-  <option value="2">1-3</option>
-  <option value="3">1-4</option>
-  <option value="4">1-5</option>
-  <option value="5">2-1</option>
-  <option value="6">2-2</option>
-  <option value="7">2-3</option>
-  <option value="8">2-4</option>
-  <option value="9">2-5</option>
-</select><br/>
-<label>Last Bee</label><input id="lastbee" type="checkbox" value="1"><br/>
-<label>Hits</label><input id="hits" type="number" value="1000"><br/>
-<button id="submit" type="button">Submit</button>
-</form>
 <table>
   <tr>
-    <th>Expected</th>
-    <td id="proper"></td>
+    <th>Stage</th>
+    <td><select id="stage">
+      <option value="0">1-1</option>
+      <option value="1">1-2</option>
+      <option value="2">1-3</option>
+      <option value="3">1-4</option>
+      <option value="4">1-5</option>
+      <option value="5">2-1</option>
+      <option value="6">2-2</option>
+      <option value="7">2-3</option>
+      <option value="8">2-4</option>
+      <option value="9">2-5</option>
+    </select></td>
   </tr>
   <tr>
-    <th>Reality</th>
-    <td id="withbug"></td>
+    <th>Last Bee</th>
+    <td><input id="lastbee" type="checkbox" value="1"></td>
+  </tr>
+  <tr>
+    <th>Hits</th>
+    <td><input id="hits" type="number" value="1000"></td>
+  </tr>
+</table>
+<button id="submit" type="button">Submit</button>
+</form>
+<br/><br/>
+<table border=1>
+  <tr>
+    <th>Iteration</th>
+    <th>Expected</th>
+    <th>Actual</th>
+    <th>Difference</th>
+    <th>Actual (BCD)</th>
+  </tr>
+  <tr>
+    <th>Digit 1</th>
+    <td align="right" id="oklog0"></td>
+    <td align="right" id="buglog0"></td>
+    <th align="right" id="difflog0"></th>
+    <td align="right" id="bcdlog0"></td>
+  </tr>
+  <tr>
+    <th>Digit 10</th>
+    <td align="right" id="oklog1"></td>
+    <td align="right" id="buglog1"></td>
+    <th align="right" id="difflog1"></th>
+    <td align="right" id="bcdlog1"></td>
+  </tr>
+  <tr>
+    <th>Digit 100</th>
+    <td align="right" id="oklog2"></td>
+    <td align="right" id="buglog2"></td>
+    <th align="right" id="difflog2"></th>
+    <td align="right" id="bcdlog2"></td>
+  </tr>
+  <tr>
+    <th>Result</th>
+    <td align="right" id="oklog3"></td>
+    <td align="right" id="buglog3"></td>
+    <th align="right" id="difflog3"></th>
+    <td align="right" id="bcdlog3"></td>
   </tr>
 </table>
 
 <script>
 function addCommas(x) {
+  if(x != "0") x = x + "0";
   return x.replace(/\B(?<!\.[0-9A-Fa-f]*)(?=([0-9A-Fa-f]{3})+(?![0-9A-Fa-f]))/g, ",");
 }
 
-document.getElementById("submit").addEventListener("click", function() {
+function abcd(xflag, x, y) {
+  var s = (x + y + xflag) & 0xFF;
+  var bc = ((x & y) | (~s & x) | (~s & y)) & 0x88;
+  var dc = (((s + 0x66) ^ s) & 0x110) >> 1;
+  var corf = ((bc | dc) - ((bc | dc) >> 2)) & 0xFF;
+  var r = (s + corf) & 0xFF;
+
+  xflag = (bc | (s & ~r)) >> 7;
+  return [r, xflag];
+}
+
+function abcd4(x, y) {
+  var xflag = 0;
+  var output = 0;
+  for(var i = 0; i < 4; i++) {
+    var result = abcd(xflag, x & 0xFF, y & 0xFF);
+    x >>= 8;
+    y >>= 8;
+    xflag = result[1];
+    output += result[0] << (8*i);
+  }
+  return output;
+}
+
+function bcd_normalize(v) {
+  var str = v.toString(16);
+  var val = 0;
+  var carry = 0;
+  for(var i = 0; i < str.length; i++) {
+    var thisval = parseInt(str[str.length - i - 1], 16);
+    thisval += carry;
+    carry = 0;
+    if(thisval >= 10) {
+      thisval = thisval - 10;
+      carry = 1;
+    }
+    val += thisval * (1 << (i*4));
+  }
+  return val;
+}
+
+function process() {
   var stage = parseInt(document.getElementById("stage").value.trim());
   var hits = parseInt(document.getElementById("hits").value.trim());
   var last_bee = 0;
   if(document.getElementById("lastbee").checked) last_bee = 1;
 
-  var correct = hits * (stage + 1) * 1000;
-  if(last_bee) correct *= 2;
-  var bugged = "1F337";
+  var correct = 0;
+  var oklog = [0,0,0,0];
+  var diff = 0;
+  var difflog = [0,0,0,0];
+  var bugged = 0;
+  var buglog = [0,0,0,0];
+  var bugbcd = 0;
+  var bcdlog = [0,0,0,0];
+  var bcd_hits = parseInt(hits.toString(10), 16);
+  var bcd_base = 0x100 * (stage+1);
+  var base = 100 * (stage + 1);
+  if(last_bee) {
+    bcd_base *= 2;
+    base *= 2;
+  }
+  for(var shift = 0; shift < 4; shift++) {
+    for(var i = 0; i < (bcd_hits & 0xF); i++) {
+      bugged = abcd4(bugged, bcd_base);
+      correct += base;
+    }
+    bcdlog[shift] = bugged;
+    buglog[shift] = bcd_normalize(bugged);
+    oklog[shift] = correct;
+    difflog[shift] = parseInt(buglog[shift].toString(16), 10) - oklog[shift];
+
+    document.getElementById("oklog"+shift).innerHTML = addCommas(oklog[shift].toString());
+    document.getElementById("buglog"+shift).innerHTML = addCommas(buglog[shift].toString(16));
+    document.getElementById("difflog"+shift).innerHTML = addCommas(difflog[shift].toString());
+    document.getElementById("bcdlog"+shift).innerHTML = addCommas(bcdlog[shift].toString(16));
+
+    bcd_hits >>= 4;
+    bcd_base <<= 4;
+    base *= 10;
+  }
+
+  bugbcd = bugged;
+  bugged = bcd_normalize(bugged);
+  diff = parseInt(bugged.toString(16), 10) - correct;
 
   document.getElementById("proper").innerHTML = addCommas(correct.toString());
-  document.getElementById("withbug").innerHTML = addCommas(bugged);
+  document.getElementById("bugint").innerHTML = addCommas(bugged.toString(16));
+  document.getElementById("diff").innerHTML = addCommas(diff.toString());
+  document.getElementById("bughex").innerHTML = addCommas(bugbcd.toString(16));
+}
+
+document.getElementById("form").addEventListener("submit", function(e) {
+  e.preventDefault();
+  process();
 });
+
+document.getElementById("form").addEventListener("change", process);
+document.getElementById("submit").addEventListener("click", process);
 </script>
 </body>
 </html>
