Fix mistake when normalizing BCD that carries into a 0 digit

--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@ function bcd_normalize(v) {
     }
     val += thisval * (1 << (i*4));
   }
+  if(carry) {
+    val += 1 * (1 << (str.length * 4));
+  }
   return val;
 }
 
